Added Collection sub parser

--- a/specs/test.html
+++ b/specs/test.html
@@ -16,9 +16,11 @@
 		<script src="../lib/backbone/backbone.js"></script>
 		<!-- Source files -->
 		<script src="../src/CAP.js"></script>
+		<script src="../src/CSP.js"></script>
         <!-- Helper files -->
         <!-- Spec files -->
 		<script src="CAP.spec.js"></script>
+		<script src="CSP.spec.js"></script>
     	<script type="text/javascript">
     		jQuery(document).ready(function () {
 	    		var jasmineEnv = jasmine.getEnv();
